# biocirv-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  colab_setup.py  debug_chat.py  debug_db.py  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
handoffs/: modernization_phase_1.md  modernization_phase_2.md  modernization_phase_3.md  modernization_phase_4.md  restoration_handoff.md
legacy_code/: sandbox_setup_hardened.py
notebooks/: ai_analysis.ipynb  biocirv_ai_analysis_playground.ipynb  sandbox_exploration.ipynb
plans/: modernization_roadmap.md
scripts/: check_agent.py  debug_chat.py  debug_db.py
src/ca_biositing/ai_exploration/: sandbox_setup.py  schema.py
tests/: test_imports.py
